--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,8 +1,8 @@
 name: ci
 
 on:
-  push:  
-    branches: [ "dev" ]
+  push:
+    branches: ["dev"]
 
 jobs:
   docker:
@@ -12,12 +12,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Login to Dockerhub
         uses: docker/login-action@v3
-        with: 
+        with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with: 
+        with:
           context: .
           file: ./Dockerfile
           tags: my-app
+          push: true
