--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,10 +15,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./Dockerfile
-          tags: my-app
-          push: true
+      - name: Build docker image
+        run: docker build -t my-app .
