--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,3 +17,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build docker image
         run: docker build -t my-app .
+      - name: Push docker image
+        run: docker push my-app
