--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Build docker image
         run: docker build -t my-app .
       - name: Push docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-app
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-app
