--- a/.github/workflows/workflow-trigger.yml
+++ b/.github/workflows/workflow-trigger.yml
@@ -14,8 +14,9 @@ jobs:
       - name: Fire Event
         run: |
           curl -L \
-          -X POST
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.REPOSITORY_ACCESS_TOKEN }}" \
-          https://api.github.com/repos/ngnijland/repository-dispatch-target-repo/dispatches \
-          -d '{"event_type": "dispatch-event"}'
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -H "Authorization: Bearer ${{ secrets.REPOSITORY_ACCESS_TOKEN }}" \
+            https://api.github.com/repos/ngnijland/repository-dispatch-target-repo/dispatches \
+            -d '{"event_type": "dispatch-event"}'
