--- a/.github/workflows/workflow-trigger.yml
+++ b/.github/workflows/workflow-trigger.yml
@@ -11,12 +11,9 @@ jobs:
   dispatch-event:
     runs-on: ubuntu-latest
     steps:
-      - name: Fire Event
-        run: |
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ secrets.REPOSITORY_ACCESS_TOKEN }}" \
-            https://api.github.com/repos/ngnijland/repository-dispatch-target-repo/dispatches \
-            -d '{"event_type": "dispatch-event"}'
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
+          repository: TeeradonNamkanisorn/nonprod-k8s-manifests
+          event-type: app-built
